Fixed css not showing properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ pre {
 
 .bannerHeader {
     color:black;
-    font-size: var(--font-size-large;
+    font-size: var(--font-size-large);
     font-family: newFont;
     text-align: center;
 }
